# cz-plugin-espressif

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml  requirements-all.txt  requirements.txt  taplo.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-ql.yml  create-release.yml  dangerjs.yml  draft-release.yml  plugin-tests.yml  pre-commit.yml  publish-pypi.yml  pypa-publish-pypi.yml  sync-jira.yml
cz_plugin_espressif/: README.md  __init__.py  cz_plugin_espressif.py
czespressif/: __init__.py  config.py  czespressif.py  defaults.py  example.py  questions.py
czespressif/templates/: CHANGELOG.md.j2  RELEASE_NOTES.md.j2  macros.md.j2
docker/: Dockerfile  entrypoint.sh  run_command.txt
docs/: Release_notes_example.md  Release_notes_example_with_footer.md
tests/: conftest.py  test_changelog.py  test_czespressif.py
tests/__snapshots__/test_changelog/: test_changelog_cz_default_full.md  test_changelog_cz_default_incremental.md  test_changelog_czespressif_full.md  test_changelog_czespressif_full_no_emoji.md  test_changelog_czespressif_incremental.md  test_changelog_czespressif_incremental_no_emoji.md
tests/__snapshots__/test_czespressif/: test_example.md  test_info.md  test_schema.md
