[project]
    authors = [
        { name = "Espressif Systems" },
        { name = "Tomas Sebestik", email = "tomas.sebestik@espressif.com" },
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.9",
    ]
    description = "Commitizen plugin with Espressif code style"
    dynamic = ["version"]
    license = { text = "Apache 2.0" }
    name = "czespressif"
    readme = "README.md"
    requires-python = ">=3.9"

    dependencies = ["commitizen>=3.29.0"]

    [project.optional-dependencies]
        dev = ["just-bin~=1.26.0", "pip-tools~=7.3", "pre-commit~=3.3.0", "twine~=5.1.1"]
        test = [
            "pytest-cov~=4.1.0",
            "pytest-mock~=3.14.0",
            "pytest-sugar~=1.0.0",
            "pytest~=7.4.0",
            "syrupy~=4.7.0",
        ]

    [project.entry-points."commitizen.plugin"]
        czespressif = "czespressif:CzPluginEspressif"

[project.urls]
    Changelog = "https://github.com/espressif/cz-plugin-espressif/blob/master/CHANGELOG.md"
    Homepage  = "https://github.com/espressif/cz-plugin-espressif/"
    Source    = "https://github.com/espressif/cz-plugin-espressif/"
    Tracker   = "https://github.com/espressif/cz-plugin-espressif/issues/"

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=64"]

[tool.setuptools.packages.find]
    where = ["."]

[tool.setuptools.package-data]
    czespressif = ["*.py", "templates/*"]

[tool.setuptools.dynamic]
    version = { attr = "czespressif.__init__.__version__" }

[tool.codespell]
    skip = 'tests/*'

[tool.ruff]
    extend-exclude                 = []
    format.docstring-code-format   = true
    format.quote-style             = "single"
    line-length                    = 160
    lint.exclude                   = ["tests/**/*"]
    lint.isort.force-single-line   = true
    lint.isort.lines-between-types = 1
    lint.select                    = ["B", "C4", "C901", "E", "F", "I", "N", "PL", "S", "UP", "W"]

[tool.mypy]
    exclude                = ["^__init__.py$", "^build/.*", "^dist/.*", "^docs/.*", "^tests/.*"]
    ignore_missing_imports = true
    packages               = "czespressif"
    pretty                 = true
    python_version         = "3.9"
    warn_redundant_casts   = true
    warn_return_any        = true

[tool.pytest.ini_options]
    addopts   = "-s --log-cli-level DEBUG --cov=czespressif --cov-report=term"
    markers   = ["settings: mark test to use custom czespressif settings from pyproject.toml"]
    testpaths = "tests"

[tool.coverage.run]
    omit = ["*/tests/*", "__*__.py"]

[tool.yamlfix]
    comments_min_spaces_from_content = 1
    line_length                      = 200
    preserve_quotes                  = true
    section_whitelines               = 1
    sequence_style                   = "keep_style"
    whitelines                       = 1

[tool.commitizen]
    annotated_tag              = true
    bump_message               = 'change(bump): release $current_version → $new_version [skip-ci]'
    changelog_merge_prerelease = true
    changelog_start_rev        = "v0.1.0"
    name                       = "czespressif"
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version                    = "1.3.0"
    version_files              = ["czespressif/__init__.py:__version__"]
    version_provider           = "commitizen"
