[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=64"]

[project]
    authors = [{ name = "Espressif Systems" }, { name = "Tomas Sebestik", email = "tomas.sebestik@espressif.com" }]
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.9",
    ]
    description = "Commitizen plugin with Espressif code style"
    dynamic = ["version"]
    entry-points."commitizen.plugin".czespressif = "czespressif:CzPluginEspressif"
    license = { text = "Apache 2.0" }
    name = "czespressif"
    readme = "README.md"
    requires-python = ">=3.9"
    urls.Changelog = "https://github.com/espressif/cz-plugin-espressif/blob/master/CHANGELOG.md"
    urls.Homepage = "https://github.com/espressif/cz-plugin-espressif/"
    urls.Source = "https://github.com/espressif/cz-plugin-espressif/"
    urls.Tracker = "https://github.com/espressif/cz-plugin-espressif/issues/"

    dependencies               = ["commitizen>=3.29.0"]
    optional-dependencies.dev  = ["just-bin>=1.26.0", "pre-commit>=4.0.1", "twine>=5.1.1"]
    optional-dependencies.test = ["pytest-cov>=4.1.0", "pytest-mock>=3.14.0", "pytest-sugar>=1.0.0", "pytest>=7.4.0", "syrupy>=4.7.0"]

[tool]
    [tool.setuptools]
        dynamic.version          = { attr = "czespressif.__init__.__version__" }
        package-data.czespressif = ["*.py", "templates/*"]
        packages.find.where      = ["."]

    [tool.codespell]
        skip = 'tests/*'

    [tool.ruff]
        extend-exclude                 = []
        format.docstring-code-format   = true
        format.quote-style             = "single"
        line-length                    = 160
        lint.exclude                   = ["tests/**/*"]
        lint.isort.force-single-line   = true
        lint.isort.lines-between-types = 1
        lint.select                    = ["B", "C4", "C901", "E", "F", "I", "N", "PL", "S", "UP", "W"]

    [tool.mypy]
        exclude                = ["^__init__.py$", "^build/.*", "^dist/.*", "^docs/.*", "^tests/.*"]
        ignore_missing_imports = true
        packages               = "czespressif"
        pretty                 = true
        python_version         = "3.9"
        warn_redundant_casts   = true
        warn_return_any        = true

    [tool.pytest]
        ini_options.addopts   = "-s --log-cli-level DEBUG --cov=czespressif --cov-report=term"
        ini_options.markers   = ["settings: mark test to use custom czespressif settings from pyproject.toml"]
        ini_options.testpaths = "tests"

    [tool.coverage]
        run.branch   = true
        run.omit     = ["*/tests/*", "__*__.py"]
        run.parallel = true
        run.source   = ["czespressif"]

    [tool.yamlfix]
        comments_min_spaces_from_content = 1
        line_length                      = 200
        preserve_quotes                  = true
        section_whitelines               = 1
        sequence_style                   = "keep_style"
        whitelines                       = 1

    [tool.commitizen]
        annotated_tag              = true
        bump_message               = 'change(bump): release $current_version → $new_version [skip-ci]'
        changelog_merge_prerelease = true
        changelog_start_rev        = "v0.1.0"
        name                       = "czespressif"
        tag_format                 = "v$version"
        update_changelog_on_bump   = true
        version                    = "1.3.1"
        version_files              = ["czespressif/__init__.py:__version__"]
        version_provider           = "commitizen"

    [tool.pip-tools]
        allow-unsafe     = true
        annotation-style = "line"
        strip-extras     = true
